# fABMACS

./: AUTHORS  PATCHscript.sh  benzoisoxazoloazepinelist  list  readme.md
RUNdirs/ALANINE/: 200Reactions-PBS-script  README  isob.cpt  isob.gro  md.mdp  params.in  topol.top
RUNdirs/RErun/: CYLINDER-params.in  HYPER-params.in  OUTside.cpt  OUTside.gro  README  Reference  SPHERE-params.in  back.itp  cylpoints  cylpoints-hyperdynamics  isob.cpt  isob.gro  ligand.itp  md.mdp  shortbacks.itp  sphpoints  topol.top
fABscripts/: getReference.sh  readme.md  restraintGen.py  scaleLine.py
src/contrib/: CMakeLists.txt  hello.f
src/gromacs/legacyheaders/: #domdec.h#  domdec.h
src/gromacs/mdlib/: domdec.c
src/programs/: CMakeLists.txt
src/programs/mdrun/: ALANINE-hyper.f  ALANINE.f  ALANINEMDdotC  Cylinder.f  NOTES  NormalSafe-md.c-file  PatchingMDdotc  PatchingRMSD.f  common_files.inc  md.c
